src/objects/Accounting_Data_Load__c.object
<CustomObject>
    <fields>
        <fullName>Account_Code__c</fullName>
        <label>Account Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>April_Data__c</fullName>
        <defaultValue>0</defaultValue>
        <label>April Data</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>August_Data__c</fullName>
        <defaultValue>0</defaultValue>
        <label>August Data</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>December_Data__c</fullName>
        <defaultValue>0</defaultValue>
        <label>December Data</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Department_Code__c</fullName>
        <label>Department Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>February_Data__c</fullName>
        <defaultValue>0</defaultValue>
        <label>February Data</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>January_Data__c</fullName>
        <defaultValue>0</defaultValue>
        <label>January Data</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>July_Data__c</fullName>
        <defaultValue>0</defaultValue>
        <label>July Data</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>June_Data__c</fullName>
        <defaultValue>0</defaultValue>
        <label>June Data</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>March_Data__c</fullName>
        <defaultValue>0</defaultValue>
        <label>March Data</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>May_Data__c</fullName>
        <defaultValue>0</defaultValue>
        <label>May Data</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>November_Data__c</fullName>
        <defaultValue>0</defaultValue>
        <label>November Data</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>October_Data__c</fullName>
        <defaultValue>0</defaultValue>
        <label>October Data</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Org_Code__c</fullName>
        <label>Org Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Code__c</fullName>
        <label>Project Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>September_Data__c</fullName>
        <defaultValue>0</defaultValue>
        <label>September Data</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <formula>January_Data__c + February_Data__c + March_Data__c + April_Data__c + May_Data__c + June_Data__c + July_Data__c + August_Data__c + September_Data__c + October_Data__c + November_Data__c + December_Data__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Actual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Accounting Data Load</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_Code__c</columns>
        <columns>Project_Code__c</columns>
        <columns>Total__c</columns>
        <columns>Year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Code__c</field>
            <operation>startsWith</operation>
            <value>5</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ADL-{00000000}</displayFormat>
        <label>Accounting Data Load Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accounting Data Loads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>